--- a/src/app/components/wecome-user/wecomeUser.component.html
+++ b/src/app/components/wecome-user/wecomeUser.component.html
@@ -35,9 +35,9 @@
         <div class="d-lg-flex">
           <span class="d-block d-lg-inline-block">
             <div class="HeaderNavlink px-0 py-2 m-0">
-              <a class="text-bold text-white no-underline">Sign in</a>
-              <span class="text-gray">or</span>
-              <a class="text-bold text-white no-underline">Sign up</a>
+              <a class="text-bold text-white no-underline" routerLink="/signin">Sign in</a>
+              <!-- <span class="text-gray">or</span>
+              <a class="text-bold text-white no-underline">Sign up</a> -->
             </div>
           </span>
         </div>
@@ -49,7 +49,11 @@
       <div class="container-lg p-responsive position-relative">
 
         <div class="col-md-7 text-center text-md-left ">
-          message
+          <div class="jumbotron">
+            <!-- <h1>Welcome </h1> -->
+            <img src="assets/images/om_sign.jpg">
+            <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+          </div>
         </div>
         <div class="mx-auto col-sm-8 col-md-5 hide-sm">
           <div class="rounded-1 text-gray bg-gray-light py-4 px-4 px-md-3 px-lg-4">
