--- a/src/app/components/wecome-user/wecomeUser.component.css
+++ b/src/app/components/wecome-user/wecomeUser.component.css
@@ -1,4 +1,10 @@
 
+.jumbotron{
+    padding: 0;
+}
+.jumbotron img{
+    max-width: 100%;
+}
 .position-relative
 {
     position: relative !important
