--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,7 @@
 <div class="main-content">
-  <!-- <h1>
-    ngprime data-table example :
-  </h1>
-  <ngprime-table-example #t1></ngprime-table-example>
-  <app-smarttable-example  [d]="t1.d"></app-smarttable-example> -->
-
-  <!-- <app-my-table [dataset]=cities>
-    <column [value]="'id'" [header]="'Id'"></column>
-    <column [value]="'city'" [header]="'City'"></column>
-    <column [value]="'country'" [header]="'Country'"></column>
-  </app-my-table> -->
-  <!-- <h1>Angular lazy loading example</h1>
-  <button routerLink="/lazy/load-me">Click Here To Check Lazy Loading Example</button>
-  <router-outlet></router-outlet> -->
-<welcome-page></welcome-page>
+  <!-- <nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/heroes">Heroes</a>
+  </nav> -->
+  <router-outlet></router-outlet>
 </div>
