--- a/src/styles.css
+++ b/src/styles.css
@@ -65,22 +65,17 @@ body{
     font-family: "Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     font-size: 14px;    
     background-color: #fff;
+    height: 100%;
+    width: 100%;
+    /* background-color: red; */
+    background-color: #f9f9f9;
    
 }
 
 a:hover{
     text-decoration:underline
 }
-.btn{
-    display:inline-block;
-    margin-bottom:1rem;
-    color:hsla(0,0%,100%,.7);
-    background-color:hsla(0,0%,100%,.08);
-    border:1px solid hsla(0,0%,100%,.2);
-    border-radius:.3rem;
-    -webkit-transition:color .2s,background-color .2s,border-color .2s;
-    transition:color .2s,background-color .2s,border-color .2s
-}
+
 .with-source{
     position:relative
 }
@@ -148,6 +143,7 @@ svg:not(:root) {
     vertical-align: text-top;
     fill: currentColor;
 }
+
 .mt-1 {
     margin-top: 4px !important;
 }
